--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -1,3 +1,12 @@
+a {
+	color: #fff;
+	text-decoration: none;
+}
+
+a:hover {
+	cursor: pointer;
+}
+
 .project-card {
 	display: flex;
 	justify-content: center;
@@ -5,20 +14,37 @@
 }
 
 .cursor-dot {
-	width: 4px;
-	height: 4px;
+	width: 5px;
+	height: 5px;
 	background-color: #fff;
-	-webkit-animation: 0.4s linear;
-	animation: 0.4s linear;
-	mix-blend-mode: multiply;
+	mix-blend-mode: difference;
 	position: fixed;
 	pointer-events: none;
-	top: 50%;
-	left: 50%;
 	border-radius: 50%;
 	z-index: 999;
 	transform: translate(-50%, -50%);
-	-webkit-animation: 0.1s;
-	animation: 0.1s;
 	overflow: hidden;
+	transition: all 0.5 ease;
+}
+
+.bigger {
+	display: block;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	border-style: solid;
+	border-width: 1px;
+	border-color: white;
+	background-color: rgba(0, 0, 0, 0);
+	transition: all 0.15s;
+	-webkit-transition: all 0.15s;
+	-moz-transition: all 0.15s;
+}
+
+.blurred {
+	width: 50px;
+	height: 50px;
+	border-width: 0px;
+	background: rgba(0, 0, 0, 0.5);
+	mix-blend-mode: difference;
 }
