Mouse animation on click + single tire settings change

--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -7,6 +7,10 @@ a:hover {
 	cursor: pointer;
 }
 
+.pointer {
+	transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
 .text::selection {
 	color: deepskyblue;
 	background-color: yellow;
