--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -21,10 +21,12 @@ a:hover {
 	justify-content: center;
 	align-items: center;
 	transition: font-size 0.1s linear;
+	font-size: 2em;
+	text-align: center;
 }
 
 .project-card:hover {
-	font-size: 1.5em;
+	font-size: 2.5em;
 }
 
 .cursor-dot {
@@ -59,6 +61,6 @@ a:hover {
 	width: 50px;
 	height: 50px;
 	border-width: 0px;
-	background: rgba(0, 0, 0, 0.5);
+	background: rgba(5, 5, 5, 0.5);
 	mix-blend-mode: difference;
 }
