--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -25,8 +25,8 @@ a:hover {
 	text-align: center;
 }
 
-.project-card:hover {
-	font-size: 2.5em;
+.project-card-hover:hover {
+	font-size: 2em;
 }
 
 .cursor-dot {
