--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -88,3 +88,15 @@ a:hover {
 .project-row:hover .project-row-text {
 	transform: translateX(20px);
 }
+
+.description {
+	width: 100%;
+	color: yellow;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 2.5vw;
+	line-height: 60px;
+	font-family: "Akira";
+	text-align: center;
+}
