--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -8,7 +8,8 @@ a:hover {
 }
 
 .pointer {
-	transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275),
+		opacity 0.5s ease-out;
 }
 
 .text::selection {
@@ -37,7 +38,7 @@ a:hover {
 	z-index: 999;
 	transform: translate(-50%, -50%);
 	overflow: hidden;
-	transition: all 0.5 ease;
+	transition: all 0.5s ease;
 }
 
 .bigger {
